<resources>
    <string name="app_name">Lab2-Converter</string>
    <string name="input_temperature">Input Temperature</string>
    <string name="convert">Convert</string>
    <string name="textview">TextView</string>
    <string name="zein_s_temperature_converter">Temperature Converter</string>
    <string name="awaiting_conversion">Awaiting Conversion</string>
    <string name="celsius_to_fahrenheit">State: Celsius to Fahrenheit</string>

    <string-array name="temp_conv">
        <item>Celsius to Fahrenheit </item>
        <item> Fahrenheit to Celsius</item>
    </string-array>



</resources>